--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,35 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-html {
+body {
   margin: 0;
   padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #f1f1f1;
+
 }
 
 .container {
   width: 393px;
   height: 852px;
-  border: 3px solid black;
+  border-radius: 30px;
+  background-color: #f1f1f1;
+  box-shadow:  8px 8px 16px #d7d7d7, -8px -8px 16px #ffffff;
 }
 
 header {
   width: 393px;
   height: 308px;
-  border: 1px solid red;
 }
 
 main {
   width: 393px;
   height: 544px;
-  border: 1px solid blue;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,7 +40,6 @@ ul {
   width: 100%;
   height: 400px;
   padding: 10px;
-  border: 1px solid green;
   overflow: scroll;
 }
 
@@ -46,7 +49,6 @@ li {
   padding: 5px;
   list-style: none;
   text-align: left;
-  border: 1px solid brown;
   display: flex;
   justify-self: space-between;
   align-items: center;
@@ -80,7 +82,6 @@ span {
 .input-container {
   width: 100%;
   padding:  0 10px 0 10px;
-  border: 1px solid goldenrod;
   display: flex;
   align-self: start;
 }
@@ -88,9 +89,10 @@ span {
 .input-container > input {
   width: 80%;
   height: 40px;
-  border-radius: 999px  0px 0px 999px;
+  border-radius: 999px;
   border: none;
-  background-color: #efefef;
+  background-color: #ffffff;
+  box-shadow: inset 5px 5px 10px #d7d7d7, inset -5px -5px 10px #ffffff;
   padding-left: 25px;
   font-size: 1rem;
 }
@@ -102,10 +104,70 @@ span {
 .input-container > button {
   width: 20%;
   height: 40px;
-  border-radius: 0 999px 999px 0;
-  background-color: #173ebf;
+  border-radius: 999px;
+  background-color: #4327de;
+  box-shadow: 5px 5px 10px #d7d7d7, -5px -5px 10px #ffffff;
   color: #ffffff;
   font-weight: 600;
   font-size: 0.9rem;
   font-weight: 700;
 }
+
+.input-container > button:hover {
+  outline-style: none;
+  background-color: #1e03bb;
+
+}
+
+.input-container > button:active {
+  outline: none;
+  background-color: #0c0052;
+  box-shadow: inset 5px 5px 10px #000000, inset -5px -5px 10px #4327de;;
+
+}
+
+.header-container {
+  width: 100%;
+  height: 308px;
+  padding: 10px;
+}
+
+.date {
+  margin: 30px;
+  text-align: center;
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: 800;
+}
+
+.quote-container {
+  background-color: #efefef;
+  box-shadow: inset 5px 5px 10px #d7d7d7, inset -5px -5px 10px #ffffff;
+  border-radius: 12px;
+  padding: 20px;
+  margin: 20px 0px 10px 0px;
+  width: 100%;
+  height: 140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+h3 {
+  font-size: 1rem;
+}
+
+.quote-content {
+  margin: 10px 0 5px 0;
+}
+
+.quote-author {
+  text-align: end;
+  color: #757272;
+  font-size: 0.8rem;
+  font-weight: 600;
+  font-style: italic;
+}
+
